Bug 167410 - synchronize directory window: column widths are incorrect
Summary: synchronize directory window: column widths are incorrect
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: synchronize (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-25 09:33 UTC by Paul van Erk
Modified: 2019-07-22 06:41 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot showing the strange sized columns (50.24 KB, image/png)
2008-07-25 09:33 UTC, Paul van Erk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Paul van Erk 2008-07-25 09:33:14 UTC
Version:           2.0.0-beta1 (using KDE 4.0.98)
Installed from:    SuSE RPMs

Just a short one: every time I open the synchronizer (CTRL-Y), the column widths are off by miles. The left filename takes up half the width of the window and the rest is cramped up. Resizing does not get remembered properly (just like in krusader 1.90, but there the default widths were more sane). This bug is best explained in a screenshot. The <=> divider should always be in the middle (or at least by default).
Comment 1 Paul van Erk 2008-07-25 09:33:54 UTC
Created attachment 26397 [details]
screenshot showing the strange sized columns
Comment 2 O. Puetz 2012-07-02 14:34:38 UTC
This bug is rather old, but i can still see exactly the same behaviour in Krusader Version 2.0.0 "Mars Pathfinder" under KDE 4.8.4 release 513, all installed from openSUSE 12.1 rpm repositories.
Comment 3 Paul van Erk 2012-07-02 17:36:01 UTC
Don't know how that is possible for you, as I have no problem with the same Krusader, same KDE, same openSUSE versions that you mention.
Comment 4 O. Puetz 2012-07-02 19:00:27 UTC
It's even worse as the width of the Name column increases every time i just invoke the Synchronizer. I have no idea what's the reason for this.
Comment 5 Jekyll Wu 2012-11-08 05:15:07 UTC
Can't reproduce using krusader 2.4.0-beta3. Feel free to reopen if the problem still exists in recent version.

Note, 2.0.0 is very old, which was release almost 4 years ago.
Comment 6 O. Puetz 2012-12-15 18:03:49 UTC
As openSUSE is now offering Krusader 2.4.0-beta3 "Single Step" i installed it under openSUSE 12.2 with KDE 4.9.4 "release 5" and i see the same behaviour as before with the old 2.0.0 version.
I don't know how to proceed now, but it's just annoying to resize the column size every time.
Is there any advice what i can try to narrow this down to the cause?
Comment 7 O. Puetz 2012-12-15 18:29:06 UTC
I played a bit with the Synchrinzer and found somthing interesting (at least for me).
The incorrect sizing of the first column is reproducible only if the Synchronizer window is maximized  with the title bar button. The effect does not occur if the window isn't maximized, regardless of size or position of the window on the screen.
Comment 8 Christoph Feck 2012-12-15 18:39:10 UTC
The source for krusader is at https://projects.kde.org/projects/extragear/utils/krusader/repository

Not sure which file is responsible for setting up the columns. Reopening.
Comment 9 Paul van Erk 2012-12-16 14:25:16 UTC
Any way for me to get rid of e-mails for this bug? I haven't had problems with it for years, actually. It's working perfectly fine for me, with different Qt themes, as well. To me, this would fall under 'solved'.
Comment 10 O. Puetz 2012-12-16 14:43:02 UTC
Fine that you don't see this bug.
But for me it's almost here, it's definitely not solved, but the root cause may not fall in your area. OTOH, i have no idea how to resolve or even avoid this effect. If i leave the Synchronizer windows in the maximized state (what i usually do), is can see this effect every time i reopen Synchronizer.
I de- and re-installed Krusader completely but without success. So who can point out a way to sort out the causes for this problem?
Comment 11 Martin M 2015-01-14 12:00:36 UTC
Same here still/again with 2.4.0-beta3 on KDE 1.14.1/Plasma 5, Breeze Theme
Comment 12 Alex Bikadorov 2019-07-21 15:57:06 UTC
Git commit 0a5503a9792a348fde5e47e0e06c02e69738cd22 by Alexander Bikadorov.
Committed on 21/07/2019 at 15:56.
Pushed by abikadorov into branch 'master'.

Synchronizer: Set column headers to adjust widths automatically

The user cannot resize the columns width anymore.

FIXED: [ 167410 ] synchronize directory window: column widths are incorrect

Differential Revision: https://phabricator.kde.org/D22174

M  +31   -69   krusader/Synchronizer/synchronizergui.cpp
M  +0    -5    krusader/Synchronizer/synchronizergui.h

https://commits.kde.org/krusader/0a5503a9792a348fde5e47e0e06c02e69738cd22
Comment 13 Nikita Melnichenko 2019-07-22 06:41:50 UTC
Git commit fc2090be0866f9754ad28848e79d1cb70434403e by Nikita Melnichenko.
Committed on 22/07/2019 at 06:35.
Pushed by melnichenko into branch 'stable'.

Synchronizer: Set column headers to adjust widths automatically

The user cannot resize the columns width anymore.

FIXED: [ 167410 ] synchronize directory window: column widths are incorrect

Differential Revision: https://phabricator.kde.org/D22174

(cherry picked from commit 0a5503a9792a348fde5e47e0e06c02e69738cd22)

# Resolved conflicts:
#	krusader/Synchronizer/synchronizergui.cpp
#	krusader/Synchronizer/synchronizergui.h

M  +31   -69   krusader/Synchronizer/synchronizergui.cpp
M  +0    -5    krusader/Synchronizer/synchronizergui.h

https://commits.kde.org/krusader/fc2090be0866f9754ad28848e79d1cb70434403e