Synchronizer: Set column headers to adjust widths automatically

The user cannot resize the columns width anymore.

FIXED: [ 167410 ] synchronize directory window: column widths are incorrect
BUG: 167410

Differential Revision: https://phabricator.kde.org/D22174