krusader/Synchronizer/synchronizergui.h
@@ -180,7 +180,6 @@ private:
 
 protected:
     void keyPressEvent(QKeyEvent *) Q_DECL_OVERRIDE;
-    void resizeEvent(QResizeEvent *e) Q_DECL_OVERRIDE;
     bool eventFilter(QObject *, QEvent *) Q_DECL_OVERRIDE;
 
     void executeOperation(SynchronizerFileItem *item, int op);
@@ -239,12 +238,8 @@ private:
     bool           isComparing;
     bool           wasClosed;
     bool           wasSync;
-    bool           firstResize;
     bool           hasSelectedFiles;
     SyncViewItem  *lastItem;
-
-    int            sizeX;
-    int            sizeY;
 
     QColor         foreGrounds[ TT_MAX ];
     QColor         backGrounds[ TT_MAX ];
